--- a/Soft/Views/Courses/_ViewCourse.cshtml
+++ b/Soft/Views/Courses/_ViewCourse.cshtml
@@ -1,5 +1,11 @@
-﻿@using Contoso.Pages.HtmlHelpers;
+﻿@using Contoso.Pages.Constants;
+@using Contoso.Pages.HtmlHelpers;
 @model Course
+
+@{
+    ViewData[Data.Title] = nameof(Course);
+    ViewData[Data.ItemID] = Model?.ID;
+}
 
 @Html.ViewItem(x => x.Number)
 @Html.ViewItem(x => x.Name)
