--- a/Soft/Views/Instructors/Edit.cshtml
+++ b/Soft/Views/Instructors/Edit.cshtml
@@ -1,9 +1,12 @@
 ﻿@using Contoso.Pages.Constants;
+@using Contoso.Pages.HtmlHelpers;
 @model Instructor
 
 @{
-    ViewData[Data.Title] = nameof(Instructor);
     Layout = Layouts.Edit;
 }
+
+<input type="hidden" asp-for="ID" />
+@Html.ViewItem(x => x.ID)
 
 <partial name="_EditInstructors" model="@Model" />
