--- a/Soft/Views/Shared/_Index.cshtml
+++ b/Soft/Views/Shared/_Index.cshtml
@@ -9,8 +9,7 @@
     var disabledNextLast = (pageIndex == pageCount - 1) ? "disabled" : string.Empty;
     var showMessage = $"Page {pageIndex + 1} of total pages {pageCount}";
     
-    int toInt(object? o)
-    {
+    int toInt(object? o) {
         var s = o?.ToString();
         if (s is null) return 0;
         int i;
