--- a/Soft/Views/Students/_ViewStudents.cshtml
+++ b/Soft/Views/Students/_ViewStudents.cshtml
@@ -1,5 +1,11 @@
-﻿@using Contoso.Pages.HtmlHelpers;
+﻿@using Contoso.Pages.Constants;
+@using Contoso.Pages.HtmlHelpers;
 @model Student
+
+@{
+	ViewData[Data.Title] = nameof(Student);
+	ViewData[Data.ItemID] = Model?.ID;
+}
 
 @Html.ViewItem(x => x.Name)
 @Html.ViewItem(x => x.FirstMidName)
