--- a/Soft/Views/Enrollments/_EditEnrollment.cshtml
+++ b/Soft/Views/Enrollments/_EditEnrollment.cshtml
@@ -5,8 +5,8 @@
 @{
     ViewData[Data.Title] = nameof(Enrollment);
     ViewData[Data.ItemID] = Model?.ID;
-    var courses = (IEnumerable<SelectListItem>)ViewData["CourseID"]; 
-    var students = (IEnumerable<SelectListItem>)ViewData["StudentID"];
+    var courses = (IEnumerable<SelectListItem>)ViewBag.Courses; 
+    var students = (IEnumerable<SelectListItem>)ViewBag.Students;
 }
 
 @Html.SelectItem(x => x.CourseID, courses, x => x.Course)
