--- a/Soft/Views/Home/Index.cshtml
+++ b/Soft/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Contoso.Pages.Constants;
 @{
-    ViewData[Data.Title] = "Home Page";
+    ViewData[Data.Title] = Texts.HomePage;
 }
 
 <div class="text-center">
