--- a/Soft/Views/Home/Privacy.cshtml
+++ b/Soft/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Contoso.Pages.Constants;
 @{
-    ViewData[Data.Title] = "Privacy Policy";
+    ViewData[Data.Title] = Texts.PrivacyPolicy;
 }
 <h1>@ViewData[Data.Title]</h1>
 
