--- a/Soft/Views/Shared/_Delete.cshtml
+++ b/Soft/Views/Shared/_Delete.cshtml
@@ -5,7 +5,9 @@
 
 <h1>@ViewData[Data.Title]</h1>
 
-<h3>@Texts.DeleteQuestion</h3>
+<h3>@Texts.Delete</h3>
+
+<h5>@Texts.DeleteQuestion</h5>
 
 <hr />
 
