--- a/Soft/Views/Courses/Delete.cshtml
+++ b/Soft/Views/Courses/Delete.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Contoso.Pages.Constants
 @using Contoso.Pages.HtmlHelpers
-@model Course
+@model CourseView
 
 @{
     Layout = Layouts.Delete;
