--- a/Soft/Views/Courses/Edit.cshtml
+++ b/Soft/Views/Courses/Edit.cshtml
@@ -1,11 +1,12 @@
 ﻿@using Contoso.Pages.Constants
 @using Contoso.Pages.HtmlHelpers
-@model Course
+@model CourseView
 
 @{
     Layout = Layouts.Edit;
 }
 <input type="hidden" asp-for="ID" />
 @Html.ViewItem(x => x.ID)
+@Html.ViewItem(x => x.Number)
 
 <partial name="_EditCourse" model="@Model" />
