--- a/Soft/Views/Departments/_EditDepartments.cshtml
+++ b/Soft/Views/Departments/_EditDepartments.cshtml
@@ -5,10 +5,10 @@
 @{
     ViewData[Data.Title] = nameof(Department);
     ViewData[Data.ItemID] = Model?.ID;
-    var items = (IEnumerable<SelectListItem>)ViewBag.InstructorID;
+    var instructors = (IEnumerable<SelectListItem>)ViewBag.Instructors;
 }
 
 @Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.Budget)
 @Html.EditItem(x => x.StartDate)
-@Html.SelectItem(x => x.InstructorID, items, x => x.Administrator)
+@Html.SelectItem(x => x.InstructorID, instructors, x => x.Administrator)
