100000 students and 10000 instructors

--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -8,6 +8,7 @@
     var departments = (IEnumerable<SelectListItem>)ViewBag.Departments;
 }
 
+@Html.EditItem(x => x.Number)
 @Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.Credits)
 @Html.SelectItem(x => x.DepartmentID, departments)
