--- a/Soft/Views/Instructors/_EditInstructors.cshtml
+++ b/Soft/Views/Instructors/_EditInstructors.cshtml
@@ -8,7 +8,7 @@
 }
 
 @Html.EditItem(x => x.Name)
-@Html.EditItem(x => x.FirstMidName)
+@Html.EditItem(x => x.FirstName)
 @Html.EditItem(x => x.HireDate)
 @Html.EditItem(x => x.OfficeAssignment.Location)
 
