--- a/Soft/Views/Instructors/_ViewInstructors.cshtml
+++ b/Soft/Views/Instructors/_ViewInstructors.cshtml
@@ -7,7 +7,7 @@
     ViewData[Data.ItemID] = Model?.ID;
 }
 
-@Html.ViewItem(x => x.FirstMidName)
+@Html.ViewItem(x => x.FirstName)
 @Html.ViewItem(x => x.Name)
 @Html.ViewItem(x => x.HireDate)
 @Html.ViewItem(x => x.OfficeAssignment.Location)
