--- a/Soft/Views/Students/_EditStudents.cshtml
+++ b/Soft/Views/Students/_EditStudents.cshtml
@@ -8,5 +8,5 @@
 }
 
 @Html.EditItem(x => x.Name)
-@Html.EditItem(x => x.FirstMidName)
+@Html.EditItem(x => x.FirstName)
 @Html.EditItem(x => x.EnrollmentDate)
