--- a/Soft/Views/Students/_ViewStudents.cshtml
+++ b/Soft/Views/Students/_ViewStudents.cshtml
@@ -8,7 +8,7 @@
 }
 
 @Html.ViewItem(x => x.Name)
-@Html.ViewItem(x => x.FirstMidName)
+@Html.ViewItem(x => x.FirstName)
 @Html.ViewItem(x => x.EnrollmentDate)
 
 <dt class="col-sm-2">
