--- a/Soft/Views/Home/About.cshtml
+++ b/Soft/Views/Home/About.cshtml
@@ -4,9 +4,9 @@
 @model IEnumerable<EnrollmentDateGroup>
 
 @{
-    ViewData[Data.Title] = Texts.StudentBodyStatistics;
+    ViewData[Datas.Title] = Texts.StudentBodyStatistics;
 }
-<h2>@ViewData[Data.Title]</h2>
+<h2>@ViewData[Datas.Title]</h2>
 
 <table>
     <tr>
