--- a/Soft/Views/Home/Privacy.cshtml
+++ b/Soft/Views/Home/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Contoso.Pages.Constants;
 @{
-    ViewData[Data.Title] = Texts.PrivacyPolicy;
+    ViewData[Datas.Title] = Texts.PrivacyPolicy;
 }
-<h1>@ViewData[Data.Title]</h1>
+<h1>@ViewData[Datas.Title]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
