--- a/Soft/Views/Instructors/Index.cshtml
+++ b/Soft/Views/Instructors/Index.cshtml
@@ -5,7 +5,7 @@
 
 @{
     Layout = Layouts.Index;
-    ViewData[Data.Title] = Texts.Instructors;
+    ViewData[Datas.Title] = Texts.Instructors;
 }
 
 <table class="table">
