--- a/Soft/Views/Shared/_Create.cshtml
+++ b/Soft/Views/Shared/_Create.cshtml
@@ -3,7 +3,7 @@
     Layout = Layouts.Default;
 }
 
-<h1>@ViewData[Data.Title]</h1>
+<h1>@ViewData[Datas.Title]</h1>
 
 <h3>@Texts.Create</h3>
 <hr />
