--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -3,8 +3,8 @@
 @model CourseView
 
 @{
-    ViewData[Data.Title] = nameof(Course);
-    ViewData[Data.ItemID] = Model?.ID;
+    ViewData[Datas.Title] = nameof(Course);
+    ViewData[Datas.ItemID] = Model?.ID;
     var departments = (IEnumerable<SelectListItem>)ViewBag.Departments;
 }
 
