--- a/Soft/Views/Departments/Index.cshtml
+++ b/Soft/Views/Departments/Index.cshtml
@@ -5,7 +5,7 @@
 
 @{
     Layout = Layouts.Index;
-    ViewData[Data.Title] = Texts.Departments;
+    ViewData[Datas.Title] = Texts.Departments;
     var columns = new Dictionary<string, Expression<Func<Department, dynamic>>>{
         {nameof(Department.Name), x => x.Name },
         {nameof(Department.Budget),x => x.Budget },
