--- a/Soft/Views/Shared/_Index.cshtml
+++ b/Soft/Views/Shared/_Index.cshtml
@@ -2,8 +2,8 @@
 
 @{
     Layout = Layouts.Default;
-    int pageIndex = toInt(ViewData[Data.PageIndex]);
-    int pageCount = toInt(ViewData[Data.TotalPages]);
+    int pageIndex = toInt(ViewData[Datas.PageIndex]);
+    int pageCount = toInt(ViewData[Datas.TotalPages]);
     
     var disabledFirstPrev = (pageIndex == 0) ? "disabled" : string.Empty;
     var disabledNextLast = (pageIndex == pageCount - 1) ? "disabled" : string.Empty;
@@ -18,7 +18,7 @@
     }
 }
 
-<h1>@ViewData[Data.Title]</h1>
+<h1>@ViewData[Datas.Title]</h1>
 
 <p>
     <a asp-action="@Actions.Create">@Texts.Create</a>
@@ -27,7 +27,7 @@
 <form asp-action="Index" method="get">
     <div class="form-actions no-color">
         <p>
-            Find by name: <input type="text" name="SearchString" value="@ViewData[Data.CurrentFilter]" />
+            Find by name: <input type="text" name="SearchString" value="@ViewData[Datas.CurrentFilter]" />
             <input type="submit" value="Search" class="btn btn-light" /> |
             <a asp-action="Index">Back to Full List</a>
         </p>
