--- a/Soft/Views/Students/Index.cshtml
+++ b/Soft/Views/Students/Index.cshtml
@@ -5,7 +5,7 @@
 
 @{
     Layout = Layouts.Index;
-    ViewData[Data.Title] = Texts.Students;
+    ViewData[Datas.Title] = Texts.Students;
     var columns = new Dictionary<string, Expression<Func<Student, dynamic>>>{
         {nameof(Student.FirstName), x => x.FirstName },
         {nameof(Student.Name),x => x.Name },
