--- a/Soft/Views/Courses/_ViewCourse.cshtml
+++ b/Soft/Views/Courses/_ViewCourse.cshtml
@@ -11,3 +11,6 @@
 @Html.ViewItem(x => x.Name)
 @Html.ViewItem(x => x.Credits)
 @Html.ViewItem(x => x.DepartmentName)
+@Html.ViewItem(x => x.Description)
+@Html.ViewItem(x => x.ValidFrom)
+@Html.ViewItem(x => x.ValidTo)
