--- a/Soft/Views/Departments/Index.cshtml
+++ b/Soft/Views/Departments/Index.cshtml
@@ -7,11 +7,13 @@
     Layout = Layouts.Index;
     ViewData[Datas.Title] = Texts.Departments;
     var columns = new List<Expression<Func<DepartmentView, dynamic>>>{
-        {x => x.Name },
-        {x => x.Description },
-        {x => x.Budget },
-        {x => x.StartDate },
-        {x => x.InstructorName },
+        {x => x.Name},
+        {x => x.Budget},
+        {x => x.StartDate},
+        {x => x.InstructorName},
+        {x => x.Description},
+        {x => x.ValidFrom},
+        {x => x.ValidTo}
     };
     dynamic getId(DepartmentView c) => c.ID;
 }
