--- a/Soft/Views/Enrollments/Index.cshtml
+++ b/Soft/Views/Enrollments/Index.cshtml
@@ -7,11 +7,14 @@
     Layout = Layouts.Index;
     ViewData[Datas.Title] = Texts.Enrollments;
     var columns = new List<Expression<Func<EnrollmentView, dynamic>>>{
-        {x => x.CourseID },
-        {x => x.CourseName },
-        {x => x.StudentID },
+        {x => x.CourseID},
+        {x => x.CourseName},
+        {x => x.StudentID},
         {x => x.StudentName},
-        {x => x.Grade}
+        {x => x.Grade},
+        {x => x.Description},
+        {x => x.ValidFrom},
+        {x => x.ValidTo}
     };
     dynamic getId(EnrollmentView c) => c.ID;
 }
