--- a/Soft/Views/Enrollments/_EditEnrollment.cshtml
+++ b/Soft/Views/Enrollments/_EditEnrollment.cshtml
@@ -12,3 +12,6 @@
 @Html.SelectItem(x => x.CourseID, courses)
 @Html.SelectItem(x => x.StudentID, students)
 @Html.EditItem(x => x.Grade)
+@Html.EditItem(x => x.Description)
+@Html.EditItem(x => x.ValidFrom)
+@Html.EditItem(x => x.ValidTo)
