--- a/Soft/Views/Enrollments/_ViewEnrollment.cshtml
+++ b/Soft/Views/Enrollments/_ViewEnrollment.cshtml
@@ -10,4 +10,6 @@
 @Html.ViewItem(x => x.CourseName)
 @Html.ViewItem(x => x.StudentName)
 @Html.ViewItem(x => x.Grade)
-
+@Html.ViewItem(x => x.Description)
+@Html.ViewItem(x => x.ValidFrom)
+@Html.ViewItem(x => x.ValidTo)
