--- a/Soft/Views/Home/About.cshtml
+++ b/Soft/Views/Home/About.cshtml
@@ -11,8 +11,8 @@
 
 <table>
     <tr>
-        <th>Enrollment Year |</th>
-        <th>Students</th>
+        <th>@Texts.EnrollmentYear |</th>
+        <th>@Texts.Students</th>
     </tr>
     @foreach (var item in Model)
     {
