--- a/Soft/Views/Shared/_Create.cshtml
+++ b/Soft/Views/Shared/_Create.cshtml
@@ -8,7 +8,7 @@
 <h3>@Texts.Create</h3>
 <hr />
 
-<form asp-action="Create">
+<form enctype="multipart/form-data" asp-action="Create">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <dl class="row">
