--- a/Soft/Views/Shared/_Edit.cshtml
+++ b/Soft/Views/Shared/_Edit.cshtml
@@ -9,7 +9,7 @@
 
 <hr />
 
-<form asp-action="Edit">
+<form enctype="multipart/form-data" asp-action="Edit">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <dl class="row">
