--- a/Soft/Views/CourseAssignments/_EditCourseAssignment.cshtml
+++ b/Soft/Views/CourseAssignments/_EditCourseAssignment.cshtml
@@ -11,3 +11,6 @@
 
 @Html.SelectItem(x => x.InstructorID, instructors)
 @Html.SelectItem(x => x.CourseID, courses)
+@Html.EditItem(x => x.Description)
+@Html.EditItem(x => x.ValidFrom)
+@Html.EditItem(x => x.ValidTo)
