--- a/Soft/Views/CourseAssignments/_ViewCourseAssignment.cshtml
+++ b/Soft/Views/CourseAssignments/_ViewCourseAssignment.cshtml
@@ -7,5 +7,9 @@
     ViewData[Datas.ItemID] = Model?.ID;
 }
 
+@Html.ViewItem(x => x.ID)
 @Html.ViewItem(x => x.InstructorName)
 @Html.ViewItem(x => x.CourseName)
+@Html.ViewItem(x => x.Description)
+@Html.ViewItem(x => x.ValidFrom)
+@Html.ViewItem(x => x.ValidTo)
