--- a/Soft/Views/Courses/_EditCourse.cshtml
+++ b/Soft/Views/Courses/_EditCourse.cshtml
@@ -12,3 +12,6 @@
 @Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.Credits)
 @Html.SelectItem(x => x.DepartmentID, departments)
+@Html.EditItem(x => x.Description)
+@Html.EditItem(x => x.ValidFrom)
+@Html.EditItem(x => x.ValidTo)
