--- a/Soft/Views/Students/_EditStudents.cshtml
+++ b/Soft/Views/Students/_EditStudents.cshtml
@@ -7,6 +7,12 @@
     ViewData[Datas.ItemID] = Model?.ID;
 }
 
-@Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.FirstName)
+@Html.EditItem(x => x.Name)
 @Html.EditItem(x => x.EnrollmentDate)
+@Html.EditItem(x => x.Gender)
+@Html.EditItem(x => x.Description)
+@Html.EditItem(x => x.ValidFrom)
+@Html.EditItem(x => x.ValidTo)
+@Html.ViewImage(x => x.PhotoView, 100, string.Empty)
+@Html.EditItem(x => x.PhotoUpload)
