--- a/Soft/Views/Students/_ViewStudents.cshtml
+++ b/Soft/Views/Students/_ViewStudents.cshtml
@@ -7,9 +7,14 @@
 	ViewData[Datas.ItemID] = Model?.ID;
 }
 
-@Html.ViewItem(x => x.Name)
 @Html.ViewItem(x => x.FirstName)
+@Html.ViewItem(x => x.Name)
 @Html.ViewItem(x => x.EnrollmentDate)
+@Html.ViewItem(x => x.Gender)
+@Html.ViewItem(x => x.Description)
+@Html.ViewItem(x => x.ValidFrom)
+@Html.ViewItem(x => x.ValidTo)
+@Html.ViewImage(x => x.PhotoView, 100)
 
 <dt class="col-sm-2">
 	@Html.DisplayNameFor(m => m.Enrollments)
