--- a/Soft/Views/Instructors/_ViewInstructors.cshtml
+++ b/Soft/Views/Instructors/_ViewInstructors.cshtml
@@ -9,8 +9,12 @@
 
 @Html.ViewItem(x => x.FirstName)
 @Html.ViewItem(x => x.Name)
+@Html.ViewItem(x => x.Gender)
 @Html.ViewItem(x => x.HireDate)
 @Html.ViewItem(x => x.Office)
+@Html.ViewItem(x => x.Description)
+@Html.ViewItem(x => x.ValidFrom)
+@Html.ViewItem(x => x.ValidTo)
 
 <dd class="col-sm-2">
     @Html.DisplayNameFor(x => x.Courses)
