--- a/Soft/Views/Students/Index.cshtml
+++ b/Soft/Views/Students/Index.cshtml
@@ -9,6 +9,7 @@
     var columns = new List<Expression<Func<StudentView, dynamic>>>{
         { x => x.FirstName },
         { x => x.Name },
+        { x => x.Gender },
         { x => x.EnrollmentDate },
         { x => x.Description },
         { x => x.ValidFrom },
