--- a/Soft/Views/Enrollments/_EditEnrollment.cshtml
+++ b/Soft/Views/Enrollments/_EditEnrollment.cshtml
@@ -7,11 +7,12 @@
     ViewData[Datas.ItemID] = Model?.ID;
     var courses = (IEnumerable<SelectListItem>)ViewBag.Courses; 
     var students = (IEnumerable<SelectListItem>)ViewBag.Students;
+    var grades = (IEnumerable<SelectListItem>)ViewBag.Grades;
 }
 
 @Html.SelectItem(x => x.CourseID, courses)
 @Html.SelectItem(x => x.StudentID, students)
-@Html.EditItem(x => x.Grade)
+@Html.SelectItem(x => x.Grade, grades)
 @Html.EditItem(x => x.Description)
 @Html.EditItem(x => x.ValidFrom)
 @Html.EditItem(x => x.ValidTo)
