--- a/Soft/Views/Courses/_ViewCourse.cshtml
+++ b/Soft/Views/Courses/_ViewCourse.cshtml
@@ -7,10 +7,12 @@
     ViewData[Datas.ItemID] = Model?.ID;
 }
 
+@Html.ViewItem(x => x.ID)
 @Html.ViewItem(x => x.Number)
 @Html.ViewItem(x => x.Name)
 @Html.ViewItem(x => x.Credits)
 @Html.ViewItem(x => x.DepartmentName)
+@Html.ViewItem(x => x.Code)
 @Html.ViewItem(x => x.Description)
 @Html.ViewItem(x => x.ValidFrom)
 @Html.ViewItem(x => x.ValidTo)
