--- a/Soft/Views/Departments/_EditDepartments.cshtml
+++ b/Soft/Views/Departments/_EditDepartments.cshtml
@@ -12,6 +12,7 @@
 @Html.EditItem(x => x.Budget)
 @Html.SelectItem(x => x.InstructorID, instructors)
 @Html.EditItem(x => x.StartDate)
+@Html.EditItem(x => x.Code)
 @Html.EditItem(x => x.Description)
 @Html.EditItem(x => x.ValidFrom)
 @Html.EditItem(x => x.ValidTo)
