--- a/Soft/Views/Shared/Error.cshtml
+++ b/Soft/Views/Shared/Error.cshtml
@@ -1,7 +1,9 @@
 ﻿@using Contoso.Facade.Common;
+@using Contoso.Pages.Constants;
 @model ErrorView
+
 @{
-    ViewData["Title"] = "Error";
+    ViewData[Datas.Title] = Texts.Error;
 }
 
 <h1 class="text-danger">Error.</h1>
