--- a/Soft/Views/CourseAssignments/Index.cshtml
+++ b/Soft/Views/CourseAssignments/Index.cshtml
@@ -7,13 +7,14 @@
     Layout = Layouts.Index;
     ViewData[Datas.Title] = Texts.CourseAssignments;
     var columns = new List<Expression<Func<CourseAssignmentView, dynamic>>>{
+        {x => x.ID},
+        {x => x.CourseID},
+        {x => x.CourseName},        
         {x => x.InstructorID},
         {x => x.InstructorName},
-        {x => x.CourseID},
-        {x => x.CourseName},
         {x => x.Description},
         {x => x.ValidFrom},
-        {x => x.ValidTo},
+        {x => x.ValidTo}
     };
     dynamic getId(CourseAssignmentView c) => c.ID;
 }
