--- a/Soft/Views/Students/Edit.cshtml
+++ b/Soft/Views/Students/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Contoso.Pages.Constants;
+@using Contoso.Pages.HtmlHelpers;
 @model StudentView
 
 @{
@@ -6,5 +7,6 @@
 }
 
 <input type="hidden" asp-for="ID" />
+@Html.ViewItem(x => x.ID)
 
 <partial name="_EditStudents" model="@Model" />
