--- a/Soft/Views/Students/_EditStudents.cshtml
+++ b/Soft/Views/Students/_EditStudents.cshtml
@@ -12,6 +12,7 @@
 @Html.EditItem(x => x.Name)
 @Html.SelectItem(x => x.Gender, genders)
 @Html.EditItem(x => x.EnrollmentDate)
+@Html.EditItem(x => x.Code)
 @Html.EditItem(x => x.Description)
 @Html.EditItem(x => x.ValidFrom)
 @Html.EditItem(x => x.ValidTo)
